// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WithImage renders header background image 1`] = `
<header
  aria-level="1"
  className="hspOjD"
  role="heading"
>
  <span
    aria-hidden={true}
    className="lblvod leocQa"
    style={
      Object {
        "backgroundImage": "url(https://placekitten.com/g/2/2)",
      }
    }
  >
    <img
      className="image image--seo image--hidden fERDWn"
      src="https://placekitten.com/g/2/2"
    />
  </span>
  <div
    className="fEnjoq"
  >
    <div
      className="DtEVY"
    >
      <div
        className="cIOZtk"
      >
        <div
          className="zVHGu"
        >
          <img
            alt="place holder"
            src="https://placekitten.com/g/400/242"
          />
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`WithImage renders header background image correctly when a withOverlay prop equaling true is passed 1`] = `
<header
  aria-level="1"
  className="hspOjD"
  role="heading"
>
  <span
    aria-hidden={true}
    className="gradient--overlay lblvod leocQa"
    style={
      Object {
        "backgroundImage": "url(https://placekitten.com/g/2/2)",
      }
    }
  >
    <img
      className="image image--seo image--hidden fERDWn"
      src="https://placekitten.com/g/2/2"
    />
  </span>
  <div
    className="fEnjoq"
  >
    <div
      className="DtEVY"
    >
      <div
        className="cIOZtk"
      >
        <div
          className="zVHGu"
        >
          <img
            alt="place holder"
            src="https://placekitten.com/g/400/242"
          />
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`WithImage renders header background image correctly when a withUnderlay prop equaling true is passed 1`] = `
<header
  aria-level="1"
  className="hspOjD"
  role="heading"
>
  <span
    aria-hidden={true}
    className="gradient--underlay lblvod leocQa"
    style={
      Object {
        "backgroundImage": "url(https://placekitten.com/g/2/2)",
      }
    }
  >
    <img
      className="image image--seo image--hidden fERDWn"
      src="https://placekitten.com/g/2/2"
    />
  </span>
  <div
    className="fEnjoq"
  >
    <div
      className="DtEVY"
    >
      <div
        className="cIOZtk"
      >
        <div
          className="zVHGu"
        >
          <img
            alt="place holder"
            src="https://placekitten.com/g/400/242"
          />
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`WithImage renders header with image 1`] = `
<header
  aria-level="1"
  className="hspOjD"
  role="heading"
>
  <span
    className="gEDJRt Iwzmp"
    style={Object {}}
  >
    
  </span>
  <div
    className="fEnjoq"
  >
    <div
      className="DtEVY"
    >
      <div
        className="cIOZtk"
      >
        <div
          className="zVHGu"
        >
          <img
            alt="place holder"
            src="https://placekitten.com/g/400/242"
          />
        </div>
      </div>
    </div>
  </div>
</header>
`;
